# remus-game-library

./: CMakeLists.txt
include/glad/: glad.h
include/remus/: stb_image.h
include/remus/engine/: cache.h  context.h  runtime.h  window.h
include/remus/engine/driver/: driver.h  stackDriver.h
include/remus/engine/entity/: entity.h  text.h
include/remus/engine/render/: forward.h  pipeline.h
include/remus/engine/scene/: component.h  driver.h  scene.h  stackDriver.h
include/remus/gfx/: context.h
include/remus/gfx/buffers/: ebo.h  fbo.h  rbo.h  ssbo.h  vao.h  vbo.h
include/remus/gfx/entity/: entity.h
include/remus/gfx/lighting/: directionalLights.h  lights.h  pointLights.h  spotLights.h
include/remus/gfx/models/: mesh.h  model.h  modelMatrix.h  rectangle.h
include/remus/gfx/shaders/: shader.h  shaderProgram.h
include/remus/gfx/texture/: font.h  material.h  texture2d.h  textureSet.h  writableTexture2d.h
include/remus/gfx/view/: camera.h  orthographicCamera.h  perspectiveCamera.h
include/remus/logging/: logger.h
include/remus/utils/: definitions.h  keyboard.h  mouse.h  screen.h
src/: glad.c
src/engine/: cache.cpp  context.cpp  context_defaults.cpp  runtime.cpp  window.cpp
src/engine/driver/: driver.cpp  stackDriver.cpp
src/engine/entity/: entity.cpp  text.cpp
src/engine/render/: forward.cpp  pipeline.cpp
src/engine/scene/: component.cpp  driver.cpp  scene.cpp  stackDriver.cpp
src/gfx/buffers/: ebo.cpp  fbo.cpp  rbo.cpp  ssbo.cpp  vao.cpp  vbo.cpp
src/gfx/entity/: entity.cpp
src/gfx/lighting/: directionalLights.cpp  lights.cpp  pointLights.cpp  spotLights.cpp
src/gfx/models/: mesh.cpp  model.cpp  modelMatrix.cpp  rectangle.cpp
src/gfx/shaders/: shader.cpp  shaderProgram.cpp
src/gfx/texture/: font.cpp  material.cpp  texture2d.cpp  textureSet.cpp  writableTexture2d.cpp
src/gfx/view/: camera.cpp  orthographicCamera.cpp  perspectiveCamera.cpp
src/logging/: logger.cpp
src/utils/: definitions.cpp  keyboard.cpp  mouse.cpp  screen.cpp
test/: main.cpp  main.h  settings.h  testComponent.cpp  testComponent.h  testDriver.cpp  testDriver.h  testScene.cpp  testScene.h
test/resources/: cube.glb  floor.glb  postprocessing.frag  postprocessing.vert  postprocessing_ms.frag  testShader.frag  testShader.vert
